--- a/.travis.yml
+++ b/.travis.yml
@@ -46,9 +46,9 @@ install:
   composer initialize # -- --ansi
 
 script:
-- composer require --no-scripts sensiolabs/security-checker &> /dev/null && composer security:check composer-dev.lock -- --end-point=http://security.sensiolabs.org/check_lock --ansi
+- $GOPATH/bin/ccat symfony.lock
 
-script:
-- $GOPATH/bin/ccat composer.json
 after_script:
 - ls --almost-all --color
+- $GOPATH/bin/ccat composer-dev.json
+- composer require --no-scripts sensiolabs/security-checker &> /dev/null && composer security:check composer-dev.lock -- --end-point=http://security.sensiolabs.org/check_lock --ansi
