--- a/.travis.yml
+++ b/.travis.yml
@@ -34,16 +34,7 @@ before_install:
   fi
 
 install:
-- |
-  composer require symfony/flex
-  composer require symfony/yaml
-  composer require symfony/dotenv --dev
-  composer require symfony/orm-pack
-  composer require friendsofsymfony/ckeditor-bundle
-  composer require easycorp/easyadmin-bundle
-  composer require symfony/profiler-pack --dev
-  composer require symfony/web-server-bundle --dev
-  composer initialize # -- --ansi
+- composer require symfony/flex
 
 script:
 - $GOPATH/bin/ccat symfony.lock
